name:                fiboheap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Abhiroop/fiboheap#readme
license:             BSD3
license-file:        LICENSE
author:              Abhiroop Sarkar
maintainer:          asiamgenius@gmail.com
copyright:           Copyright (c) 2017-2018 Abhiroop Sarkar
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable fiboheap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fiboheap
  default-language:    Haskell2010

test-suite fiboheap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fiboheap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Abhiroop/fiboheap
